[package]
name = "yogawm"
description = "The API based X11 window manager"
version = "0.1.0"
authors = ["schulke-214 <hello@maximilianschulke.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libx = { path = "libx" }
